--- a/grafy/ctvrtfinale.html
+++ b/grafy/ctvrtfinale.html
@@ -1,4 +1,4 @@
-<html><head><title>Východoevropské kluby mezi 8 nejlepšími</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>Východoevropské kluby mezi 8 nejlepšími v evropských pohárech</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
         <figure id="ctvrtfinale">
         <div id="container"></div>
         </figure>
@@ -324,10 +324,14 @@ Highcharts.chart('ctvrtfinale',
   visible: true,
   type: 'column'
 }],
+  subtitle: {
+  align: 'left',
+  text: 'Do nejvíce ètvrtfinále (èi odpovídající skupinové fáze) evropských soutìží se podívalo Dynamo Kyjev, v 15 sezonách. Druhá je Rudá hvìzda Bìlehrad a na støetím sdíleném místì s 8 takto úspìšnými sezonami Dynamo Drážïany, Spartak Moskva a Sparta Praha. Ta naposledy hrála ètvrtfinále Evropské ligy na jaøe 2016, vyøadil ji v nìm Villarreal.'
+},
   title: {
   align: 'left',
   margin: 30,
-  text: 'Východoevropské kluby mezi 8 nejlepšími'
+  text: 'Východoevropské kluby mezi 8 nejlepšími v evropských pohárech'
 },
   xAxis: {
   categories: ['1955-56',
