--- a/grafy/ctvrtfinale.html
+++ b/grafy/ctvrtfinale.html
@@ -1,4 +1,4 @@
-<html><head><title>Východoevropské kluby mezi 8 nejlepšími v evropských pohárech</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
+<html><head><title>Východoevropské kluby mezi 8 nejlepšími v pohárech</title></head><body><script src="https://code.highcharts.com/highcharts.js"></script><style type="text/css">text{font-family:"Asap"!important}.paragraph{font-family:"Noticia text"!important}.href{color:#666;fill:#666}.highcharts-title{font-family:"Noticia text"!important;font-weight:700!important;text-align:left!important;left:10px!important}.highcharts-subtitle{text-align:left!important;font-size:.95rem!important;left:10px!important;font-family:"Asap"!important}.highcharts-data-labels text{font-size:.85rem!important}.highcharts-axis-labels text{font-size:.85rem!important}text.highcharts-plot-line-label{font-size:.85rem!important;fill:#666}text.highcharts-plot-band-label{font-size:.85rem!important;fill:#666}text.highcharts-credits{font-size:.75rem!important}.highcharts-tooltip span{font-family:"Asap"!important}.axis-label-on-tick{fill:#aaa;color:#aaa}.mock-empty-line{fill:#fff;color:#fff}</style>
         <figure id="ctvrtfinale">
         <div id="container"></div>
         </figure>
@@ -21,10 +21,10 @@ Highcharts.chart('ctvrtfinale',
 }
 },
   series: [{
-  data: [[0.0],
+  data: [[2.0],
 [2.0],
 [2.0],
-[0.0],
+[1.0],
 [0.0],
 [1.0],
 [1.0],
@@ -75,6 +75,8 @@ Highcharts.chart('ctvrtfinale',
 [0.0],
 [0.0],
 [0.0],
+[1.0],
+[1.0],
 [0.0],
 [0.0],
 [0.0],
@@ -83,9 +85,7 @@ Highcharts.chart('ctvrtfinale',
 [0.0],
 [0.0],
 [0.0],
-[0.0],
-[0.0],
-[0.0],
+[1.0],
 [0.0],
 [0.0],
 [0.0],
@@ -113,8 +113,8 @@ Highcharts.chart('ctvrtfinale',
 [0.0],
 [0.0],
 [0.0],
-[0.0],
-[0.0],
+[3.0],
+[2.0],
 [2.0],
 [2.0],
 [3.0],
@@ -156,14 +156,14 @@ Highcharts.chart('ctvrtfinale',
 [1.0],
 [1.0],
 [0.0],
+[3.0],
+[2.0],
+[0.0],
+[2.0],
 [1.0],
-[0.0],
-[0.0],
-[0.0],
-[0.0],
-[0.0],
-[0.0],
-[0.0],
+[1.0],
+[2.0],
+[1.0],
 [0.0],
 [0.0],
 [0.0]],
@@ -178,17 +178,17 @@ Highcharts.chart('ctvrtfinale',
 [0.0],
 [0.0],
 [0.0],
-[1.0],
 [2.0],
-[1.0],
-[0.0],
+[3.0],
+[3.0],
+[2.0],
 [2.0],
 [3.0],
 [2.0],
 [1.0],
 [1.0],
 [3.0],
-[4.0],
+[2.0],
 [4.0],
 [3.0],
 [2.0],
@@ -315,27 +315,26 @@ Highcharts.chart('ctvrtfinale',
 [0.0],
 [0.0],
 [0.0],
-[0.0],
-[0.0],
-[0.0],
+[1.0],
+[1.0],
+[1.0],
 [0.0]],
-  name: 'Konfederaèní liga',
+  name: 'Konferenèní liga',
   yAxis: 0,
   visible: true,
   type: 'column'
 }],
   subtitle: {
   align: 'left',
-  text: 'Do nejvíce ètvrtfinále (èi odpovídající skupinové fáze) evropských soutìží se podívalo Dynamo Kyjev, v 15 sezonách. Druhá je Rudá hvìzda Bìlehrad a na støetím sdíleném místì s 8 takto úspìšnými sezonami Dynamo Drážïany, Spartak Moskva a Sparta Praha. Ta naposledy hrála ètvrtfinále Evropské ligy na jaøe 2016, vyøadil ji v nìm Villarreal.'
+  text: 'Do nejvíce ètvrtfinále (èi odpovídající skupinové fáze) se podívalo Dynamo Kyjev, v 16 sezonách. Následuje Crvena zvezda Bìlehrad, na sdíleném tøetím místì je Sparta.'
 },
   title: {
   align: 'left',
   margin: 30,
-  text: 'Východoevropské kluby mezi 8 nejlepšími v evropských pohárech'
+  text: 'Východoevropské kluby mezi 8 nejlepšími v pohárech'
 },
   xAxis: {
-  categories: ['1954-55',
-'1955-56',
+  categories: ['1955-56',
 '1956-57',
 '1957-58',
 '1958-59',
@@ -403,6 +402,7 @@ Highcharts.chart('ctvrtfinale',
 '2020-21',
 '2021-22',
 '2022-23',
+'2023-24',
 '2024-25'],
   min: 0
 },
